--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;400&family=Source+Sans+3:wght@200&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- dark theme sweetcher -->
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <!-- Certificate Generator -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+
     <title>RTO Mamagent System</title>
   </head>
   <body>
@@ -23,3 +40,6 @@
     <div id="root"></div>
   </body>
 </html>
+<!-- <script>
+  new Darkmode().showWidget();
+</script> -->
